Removed unneccessary buckminster settings

--- a/com.cloudbees.eclipse.updatesite-feature/buckminster.properties
+++ b/com.cloudbees.eclipse.updatesite-feature/buckminster.properties
@@ -1,5 +1,5 @@
-buckminster.output.root=G:/cbreleng/output
-buckminster.temp.root=G:/cbreleng/temp
+# buckminster.output.root=G:/cbreleng/output
+# buckminster.temp.root=G:/cbreleng/temp
 
 # sdkpath=file:/G:/eclipse-java-helios-SR1
 
