--- a/com.cloudbees.eclipse.updatesite-feature/buckminster_product.properties
+++ b/com.cloudbees.eclipse.updatesite-feature/buckminster_product.properties
@@ -1,9 +1,13 @@
-buckminster.output.root=/home/if/tmp/output
-buckminster.temp.root=/home/if/tmp/temp
+#buckminster.output.root=/home/if/tmp/output
+#buckminster.temp.root=/home/if/tmp/temp
 
 # How .qualifier in versions should be replaced
 # qualifier.replacement.*=generator:lastRevision
 
-target.os=win32
-target.ws=win32
-target.arch=x86
+# target.os=win32
+# target.ws=win32
+# target.arch=x86
+
+target.os=*
+target.ws=*
+target.arch=*
