--- a/com.cloudbees.eclipse.run.sdk/build.properties
+++ b/com.cloudbees.eclipse.run.sdk/build.properties
@@ -56,5 +56,34 @@ bin.includes = META-INF/,\
                cloudbees-sdk/lib/wagon-provider-api-1.0-beta-7.jar,\
                cloudbees-sdk/lib/xmlpull-1.1.3.1.jar,\
                cloudbees-sdk/lib/xpp3_min-1.1.4c.jar,\
-               cloudbees-sdk/lib/xstream-1.4.1.jar
+               cloudbees-sdk/lib/xstream-1.4.1.jar,\
+               cloudbees-sdk/lib/ant-plugin-1.1.jar,\
+               cloudbees-sdk/lib/app-plugin-1.2.0.jar,\
+               cloudbees-sdk/lib/config-plugin-1.1.1.jar,\
+               cloudbees-sdk/lib/db-plugin-1.1.jar,\
+               cloudbees-sdk/lib/activation-1.1.jar,\
+               cloudbees-sdk/lib/annotations-api-6.0.35.jar,\
+               cloudbees-sdk/lib/ant-1.8.3.jar,\
+               cloudbees-sdk/lib/ant-launcher-1.8.3.jar,\
+               cloudbees-sdk/lib/antlr-2.7.7.jar,\
+               cloudbees-sdk/lib/app-plugin-1.1.jar,\
+               cloudbees-sdk/lib/catalina-6.0.35.jar,\
+               cloudbees-sdk/lib/commons-codec-1.2.jar,\
+               cloudbees-sdk/lib/commons-daemon-1.0.3.jar,\
+               cloudbees-sdk/lib/coyote-6.0.35.jar,\
+               cloudbees-sdk/lib/dbcp-6.0.35.jar,\
+               cloudbees-sdk/lib/ecj-3.5.1.jar,\
+               cloudbees-sdk/lib/el-api-6.0.35.jar,\
+               cloudbees-sdk/lib/jasper-6.0.35.jar,\
+               cloudbees-sdk/lib/jasper-el-6.0.35.jar,\
+               cloudbees-sdk/lib/jsp-api-6.0.35.jar,\
+               cloudbees-sdk/lib/juli-6.0.35.jar,\
+               cloudbees-sdk/lib/mail-1.4.4.jar,\
+               cloudbees-sdk/lib/mysql-connector-java-5.1.15.jar,\
+               cloudbees-sdk/lib/servlet-api-6.0.35.jar,\
+               cloudbees-sdk/lib/stax-api-client-1.3.1.jar,\
+               cloudbees-sdk/lib/stax-appgen-1.3.1.jar,\
+               cloudbees-sdk/lib/stax-appserver-1.3.1.jar,\
+               cloudbees-sdk/lib/stax-logagent-1.3.1.jar,\
+               cloudbees-sdk/lib/stringtemplate-3.2.jar
 source.. = src/
