Adding bees.home ant property for better handling of bees sdk location in build.xml. This also makes possible to run local directly from ant build. Directly deploying from ant view is still not possible as credentials are not configured for the bundled SDK.

--- a/com.cloudbees.eclipse.run.core/plugin.xml
+++ b/com.cloudbees.eclipse.run.core/plugin.xml
@@ -4,4 +4,14 @@
 <extension-point id="com.cloudbees.eclipse.run.core.processLifecycleHook"
 		name="launchHook" schema="schema/com.cloudbees.eclipse.run.core.processLifecycleHook.exsd" />
 <extension-point id="com.cloudbees.eclipse.run.core.statusUpdater" name="statusUpdater" schema="schema/com.cloudbees.eclipse.run.core.statusUpdater.exsd"/>
+
+    <extension id="beesHomeProp" name="setAntBeesHomeProperty"
+        point="org.eclipse.ant.core.antProperties">
+        
+       <antProperty
+             name="bees.home" class="com.cloudbees.eclipse.run.core.BeesHomeProperty" headless="true" eclipseRuntime="false">
+       </antProperty>
+         
+    </extension>
+
 </plugin>
