Added placeholder code for potential future change where one could use native ant scripts to run bees sdk tasks.

--- a/com.cloudbees.eclipse.run.core/plugin.xml
+++ b/com.cloudbees.eclipse.run.core/plugin.xml
@@ -8,9 +8,9 @@
     <extension id="beesHomeProp" name="setAntBeesHomeProperty"
         point="org.eclipse.ant.core.antProperties">
         
-       <antProperty
-             name="bees.home" class="com.cloudbees.eclipse.run.core.BeesHomeProperty" headless="true" eclipseRuntime="false">
-       </antProperty>
+       <antProperty name="bees.home" class="com.cloudbees.eclipse.run.core.BeesProperty" headless="true" eclipseRuntime="false" />
+<!--       <antProperty name="bees.apiSecret" class="com.cloudbees.eclipse.run.core.BeesProperty" headless="true" eclipseRuntime="false" />
+       <antProperty name="bees.apiKey" class="com.cloudbees.eclipse.run.core.BeesProperty" headless="true" eclipseRuntime="false" />-->
          
     </extension>
 
