Maven war builder hook.
Fix for #1569 Tail Error Log actually shows access log instead - https://rm.cloudbees.com/issues/1569

--- a/com.cloudbees.eclipse.m2e/plugin.xml
+++ b/com.cloudbees.eclipse.m2e/plugin.xml
@@ -9,5 +9,13 @@
       </hook>
    </extension>
 
+ <extension
+       point="com.cloudbees.eclipse.run.core.warBuilderHook">
+    <hook
+          defaultHandler="com.cloudbees.eclipse.m2e.MavenWarBuilderHook"
+          id="com.cloudbees.eclipse.m2e.MavenWarBuilderHook">
+    </hook>
+ </extension>
+
 
 </plugin>
