https://rm.cloudbees.com/issues/1743
Forge repo and apps list is now properly reloaded after CS init.

--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -355,5 +355,13 @@
           </adapter>
        </factory>
     </extension>
-     
+    
+    <extension
+       point="com.cloudbees.eclipse.run.core.newClickStartProjectHook">
+    <hook
+          defaultHandler="com.cloudbees.eclipse.dev.ui.NewRepoHook"
+          id="com.cloudbees.eclipse.dev.ui.NewRepoHook">
+    </hook>
+    </extension>
+    
 </plugin>
