Reworked perspective defs so CB is at top right and git+db is stacked next to it in case they exist.

--- a/com.cloudbees.eclipse.dev.scm.egit/plugin.xml
+++ b/com.cloudbees.eclipse.dev.scm.egit/plugin.xml
@@ -10,4 +10,17 @@
       </forgeSyncProvider>
    </extension>
 
+	<extension
+        point="org.eclipse.ui.perspectiveExtensions">
+
+        <perspectiveExtension
+              targetID="com.cloudbees.eclipse.ui.CloudBeesPerspective">
+           <view
+                 id="org.eclipse.egit.ui.RepositoriesView"
+                 relationship="stack"                                  
+                 relative="com.cloudbees.eclipse.ui.views.CBTreeView">
+           </view>
+        </perspectiveExtension>
+	</extension>
+
 </plugin>
