--- a/com.cloudbees.eclipse.updatesite-feature/buckminster.properties
+++ b/com.cloudbees.eclipse.updatesite-feature/buckminster.properties
@@ -6,9 +6,9 @@
 # How .qualifier in versions should be replaced
 # qualifier.replacement.*=generator:lastRevision
 
-target.os=linux
-target.ws=gtk
-target.arch=x86_64
+target.os=*
+target.ws=*
+target.arch=*
 
 # target.os=win32
 # target.ws=win32
