--- a/com.cloudbees.eclipse.updatesite-feature/build.properties
+++ b/com.cloudbees.eclipse.updatesite-feature/build.properties
@@ -1,4 +1,4 @@
 bin.includes = feature.xml
 category.id.com.cloudbees.eclipse.cat=CloudBees Toolkit
-category.members.com.cloudbees.eclipse.cat=com.cloudbees.eclipse,com.cloudbees.eclipse.dev.scm.subversive,com.cloudbees.eclipse.dev.scm.subclipse,com.cloudbees.eclipse.dev.scm.egit,com.cloudbees.eclipse.m2e,com.cloudbees.eclipse.dtp,com.cloudbees.eclipse.wst
+category.members.com.cloudbees.eclipse.cat=com.cloudbees.eclipse,com.cloudbees.eclipse.dev.scm.subversive,com.cloudbees.eclipse.dev.scm.subclipse,com.cloudbees.eclipse.m2e,com.cloudbees.eclipse.dtp,com.cloudbees.eclipse.wst
 category.description.com.cloudbees.eclipse.cat=CloudBees Toolkit
