--- a/com.cloudbees.eclipse.dev.scm.egit/plugin.xml
+++ b/com.cloudbees.eclipse.dev.scm.egit/plugin.xml
@@ -23,4 +23,41 @@
         </perspectiveExtension>
 	</extension>
 
+    <extension
+       point="org.eclipse.ui.popupMenus">
+     <objectContribution
+           adaptable="false"
+           id="com.cloudbees.eclipse.dev.ui.objectContribution.forge.egitclone"
+           objectClass="com.cloudbees.eclipse.core.forge.api.ForgeInstance">
+        <action        
+              class="com.cloudbees.eclipse.dev.scm.egit.internal.CloneRepoAction"
+              enablesFor="1"
+              id="com.cloudbees.eclipse.dev.ui.action.forge.properties"
+              label="Clone repository..."
+              icon="platform:/plugin/org.eclipse.egit.ui/icons/obj16/import_obj.gif"
+              menubarPath="top"
+              >
+        </action>
+	<visibility>
+		<and>
+           <objectState
+                 name="typeName"
+                 value="GIT">
+           </objectState>
+           <or>
+           <objectState
+                 name="statusName"
+                 value="SKIPPED">
+           </objectState>
+           <objectState
+                 name="statusName"
+                 value="UNKNOWN">
+           </objectState>
+           </or>
+           </and>
+     </visibility>
+
+     </objectContribution>
+	</extension>
+	
 </plugin>
