--- a/com.cloudbees.eclipse.dev.scm.subclipse/plugin.xml
+++ b/com.cloudbees.eclipse.dev.scm.subclipse/plugin.xml
@@ -10,4 +10,42 @@
       </forgeSyncProvider>
    </extension>
 
+
+    <extension
+       point="org.eclipse.ui.popupMenus">
+     <objectContribution
+           adaptable="false"
+           id="com.cloudbees.eclipse.dev.ui.objectContribution.forge.sublipse.import"
+           objectClass="com.cloudbees.eclipse.core.forge.api.ForgeInstance">
+        <action        
+              class="com.cloudbees.eclipse.dev.scm.subclipse.internal.RepoLocationAction"
+              enablesFor="1"
+              id="com.cloudbees.eclipse.dev.ui.action.forge.subclipse.import"
+              label="Import repository location..."
+              icon="platform:/plugin/org.tigris.subversion.subclipse.ui/icons/full/wizards/newconnect_wiz.gif"
+              menubarPath="top"
+              >
+        </action>
+	<visibility>
+		<and>
+           <objectState
+                 name="typeName"
+                 value="SVN">
+           </objectState>
+           <or>
+           <objectState
+                 name="statusName"
+                 value="SKIPPED">
+           </objectState>
+           <objectState
+                 name="statusName"
+                 value="UNKNOWN">
+           </objectState>
+           </or>
+           </and>
+     </visibility>
+
+     </objectContribution>
+	</extension>
+	
 </plugin>
